test/trivial/shannon/readWriteBool.good
true
false
readWriteBool.chpl:9: error: Unhandled system error: bad format (1002) in channel.read(inout a:bool) with path /home/mppf/chapel/svn_ferguson/test/trivial/shannon/readWriteBool.stdin offset 11
