test/trivial/shannon/readWriteBool.chpl
var isBushAnIdiot: boolean;
var isBushALiar:   boolean;

writeln("Is Bush an idiot? (true or false)");
read(isBushAnIdiot);
writeln(isBushAnIdiot);
while (!isBushAnIdiot) {
  writeln("That's the wrong answer, try again.");
  read(isBushAnIdiot);
}
writeln(isBushAnIdiot);
writeln("Is Bush a liar? (true or false)");
read(isBushALiar);
